# ps-mem

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  README.tpl  build.rs
.github/workflows/: test-windows.yml
docs/: review.1.md
docs/reviews/: 2026-05-20_code_review.2.md  2026-06-01_code_review.3.md
fixtures/t1/proc/1/: status
fixtures/t1/proc/10/: status
fixtures/t1/proc/101/: status
fixtures/t1/proc/102/: comm  status
fixtures/t1/proc/104/: comm  status
fixtures/t1/proc/105/: comm  status
fixtures/t1/proc/106/: comm  status
fixtures/t1/proc/107/: comm  status
fixtures/t1/proc/108/: comm  status
fixtures/t1/proc/109/: comm  status
fixtures/t1/proc/11/: status
fixtures/t1/proc/110/: comm  status
fixtures/t1/proc/111/: comm  status
fixtures/t1/proc/112/: comm  status
fixtures/t1/proc/113/: comm  status
fixtures/t1/proc/114/: status
fixtures/t1/proc/115/: comm  status
fixtures/t1/proc/116/: status
fixtures/t1/proc/117/: comm  status
fixtures/t1/proc/1181/: comm  status
fixtures/t1/proc/1182/: status
fixtures/t1/proc/119/: status
fixtures/t1/proc/20/: comm  (+1 more)
scripts/: copy_proc.sh
specs/: 0.requirements.md  1.acceptance-criteria.md  2.design.md  3.tasks.md
src/: lib.rs  main.rs  run.rs
src/conf/: cmd.help.rs.txt  cmd.match.rs.txt  mod.rs  parse.rs
src/util/: err.rs  mod.rs  opt_sort_order.rs  opt_uc_x_param.rs
test-helper/: Cargo.toml
test-helper/src/: exe-sleep.rs
test-helper/tests/: test.rs
tests/: helper.rs  helper_l.rs  test.rs  test_e.rs  test_l.rs
xtask/src/: gen_src_cmd.rs  main.rs  ps-mem-cmd.txt
(+607 files in other folders)
